--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -3,3 +3,8 @@
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
+.butt1 {
+    background-color: rgb(0 0 0);
+    color: #FFFFFF
+}
+
