--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,16 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+.items {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+    margin-top: 32px;
+}
+
+#one,#two,#three,#four {
+    flex-basis: 200px;
 }
 
 /* do not edit this footer */
